# nonebot_plugin_nikke

./: README.md  __init__.py  pyproject.toml
.github/workflows/: pypi-publish.yml
commands/: character_data.json
nonebot_plugin_nikke/: __init__.py
nonebot_plugin_nikke/commands/: character_picture.py  character_rating.py
nonebot_plugin_nikke/json/: character_data.json  character_rating.json
